--- a/ts/packages/agents/montage/src/site/index.html
+++ b/ts/packages/agents/montage/src/site/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="title" id="title">Untitled Montage</div>
+    <div class="title" id="title"></div>
     <div id="mainContainer" class="mainContainer"></div>
     <script type="module" src="index.js"></script>
   </body>
