--- a/ts/packages/shell/src/renderer/viewHost.html
+++ b/ts/packages/shell/src/renderer/viewHost.html
@@ -3,57 +3,61 @@
  Licensed under the MIT License. -->
 
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-      .divider {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 400px;
-        width: 5px;
-        cursor: ew-resize;
-        background-color: #ddd;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="divider" id="divider"></div>
-    <script>
-      const ipcRenderer = window.electron.ipcRenderer;
 
-      const divider = document.getElementById("divider");
-      let isDragging = false;
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title></title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
 
-      divider.addEventListener("mousedown", () => {
-        isDragging = true;
-      });
+    .divider {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 400px;
+      width: 5px;
+      cursor: ew-resize;
+      background-color: #ddd;
+    }
+  </style>
+</head>
 
-      window.addEventListener("mousemove", (e) => {
-        if (!isDragging) return;
-        const newX = e.clientX;
+<body>
+  <div class="divider" id="divider"></div>
+  <script>
+    const ipcRenderer = window.electron.ipcRenderer;
+
+    const divider = document.getElementById("divider");
+    let isDragging = false;
+
+    divider.addEventListener("mousedown", () => {
+      isDragging = true;
+    });
+
+    window.addEventListener("mousemove", (e) => {
+      if (!isDragging) return;
+      const newX = e.clientX;
+      divider.style.left = `${newX}px`;
+      ipcRenderer.send("views-resized-by-user", newX);
+    });
+
+    window.addEventListener("mouseup", () => {
+      isDragging = false;
+    });
+
+    ipcRenderer.on("set-divider-left", (_, newX) => {
+      if (newX < 0) {
+        divider.style.visibility = "hidden";
+      } else {
         divider.style.left = `${newX}px`;
-        ipcRenderer.send("views-resized-by-user", newX);
-      });
+        divider.style.visibility = "visible";
+      }
+    });
+  </script>
+</body>
 
-      window.addEventListener("mouseup", () => {
-        isDragging = false;
-      });
-
-      ipcRenderer.on("chat-view-resized", (_, newX) => {
-        divider.style.left = `${newX}px`;
-        if (Math.abs(document.body.clientWidth - newX) < 10) {
-          divider.style.visibility = "hidden";
-        } else {
-          divider.style.visibility = "visible";
-        }
-      });
-    </script>
-  </body>
 </html>
