Fix shell zoom settings (#917)
- The main window shouldn't zoom, so that the divider will be at the
right position.
- Zoom apply to both chat view and browser view together.
- Save the right value (from chat view) for zoom and F12 settings (TODO:
might want to save the state for the main window and inline browser as
well)
- Set up F12 for main window as well.

--- a/ts/packages/shell/src/renderer/viewHost.html
+++ b/ts/packages/shell/src/renderer/viewHost.html
@@ -12,6 +12,7 @@
         margin: 0;
         overflow: hidden;
       }
+
       .divider {
         position: absolute;
         top: 0;
@@ -23,6 +24,7 @@
       }
     </style>
   </head>
+
   <body>
     <div class="divider" id="divider"></div>
     <script>
@@ -46,11 +48,11 @@
         isDragging = false;
       });
 
-      ipcRenderer.on("chat-view-resized", (_, newX) => {
-        divider.style.left = `${newX}px`;
-        if (Math.abs(document.body.clientWidth - newX) < 10) {
+      ipcRenderer.on("set-divider-left", (_, newX) => {
+        if (newX < 0) {
           divider.style.visibility = "hidden";
         } else {
+          divider.style.left = `${newX}px`;
           divider.style.visibility = "visible";
         }
       });
