Update build output paths

--- a/ts/packages/planVisualizer/public/index.html
+++ b/ts/packages/planVisualizer/public/index.html
@@ -122,6 +122,6 @@
     </div>
 
     <!-- Application JS - Using ES modules -->
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
