--- a/ts/packages/agents/turtle/src/site/index.html
+++ b/ts/packages/agents/turtle/src/site/index.html
@@ -6,11 +6,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Turtle Canvas</title>
+    <title>Turtle Graphics Canvas</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
+    <div>
+      <h1>Turtle Graphics Canvas</h1>
+      <br />
+    </div>
+    <div id="content"></div>
     <script src="index.js"></script>
   </body>
 </html>
