--- a/ts/packages/agents/montage/src/site/index.html
+++ b/ts/packages/agents/montage/src/site/index.html
@@ -9,8 +9,11 @@
     <title>Image Montage</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body class="focusOff">
     <div class="title" id="title">No Montage Loaded</div>
+    <div id="focusContainer">
+      <img id="focusedImage" />
+    </div>
     <div id="mainContainer" class="mainContainer"></div>
     <script type="module" src="index.js"></script>
   </body>
