--- a/ts/packages/agents/montage/src/site/index.html
+++ b/ts/packages/agents/montage/src/site/index.html
@@ -11,8 +11,11 @@
   </head>
   <body class="focusOff">
     <div class="title" id="title">No Montage Loaded</div>
+
     <div id="focusContainer">
+      <input type="button" id="btnPrevious" value="&lt;" alt="Previous Image" />
       <img id="focusedImage" />
+      <input type="button" id="btnNext" value="&gt;" alt="Next Image" />
     </div>
     <div id="mainContainer" class="mainContainer"></div>
     <script type="module" src="index.js"></script>
