--- a/ts/packages/agents/montage/src/site/index.html
+++ b/ts/packages/agents/montage/src/site/index.html
@@ -11,7 +11,13 @@
   </head>
   <body class="focusOff">
     <div class="title" id="title">No Montage Loaded</div>
-    <input type="button" id="btnSlideShow" value="SlideShow" alt="Start Slide Show" style="display: none;" />
+    <input
+      type="button"
+      id="btnSlideShow"
+      value="SlideShow"
+      alt="Start Slide Show"
+      style="display: none"
+    />
     <div id="focusContainer">
       <input type="button" id="btnPrevious" value="&lt;" alt="Previous Image" />
       <img id="focusedImage" />
