--- a/ts/packages/agents/montage/src/site/index.html
+++ b/ts/packages/agents/montage/src/site/index.html
@@ -20,7 +20,9 @@
     />
     <div id="focusContainer">
       <input type="button" id="btnPrevious" value="&lt;" alt="Previous Image" />
-      <img id="focusedImage" />
+      <div class="focusImageContainer">
+        <img id="focusedImage" />
+      </div>
       <input type="button" id="btnNext" value="&gt;" alt="Next Image" />
     </div>
     <div id="mainContainer" class="mainContainer"></div>
