--- a/ts/packages/agents/montage/src/site/index.html
+++ b/ts/packages/agents/montage/src/site/index.html
@@ -9,8 +9,22 @@
     <title>Image Montage</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body class="focusOff">
     <div class="title" id="title">No Montage Loaded</div>
+    <input
+      type="button"
+      id="btnSlideShow"
+      value="SlideShow"
+      alt="Start Slide Show"
+      style="display: none"
+    />
+    <div id="focusContainer">
+      <input type="button" id="btnPrevious" value="&lt;" alt="Previous Image" />
+      <div class="focusImageContainer">
+        <img id="focusedImage" />
+      </div>
+      <input type="button" id="btnNext" value="&gt;" alt="Next Image" />
+    </div>
     <div id="mainContainer" class="mainContainer"></div>
     <script type="module" src="index.js"></script>
   </body>
