fixed montage title ovewrrite bug

--- a/ts/packages/agents/montage/src/site/index.html
+++ b/ts/packages/agents/montage/src/site/index.html
@@ -11,6 +11,7 @@
   </head>
   <body class="focusOff">
     <div class="title" id="title">No Montage Loaded</div>
+    <input type="hidden" id="montageId" value="-1" />
     <input
       type="button"
       id="btnSlideShow"
