--- a/ts/packages/agents/browser/src/extension/websiteLibraryPanel.html
+++ b/ts/packages/agents/browser/src/extension/websiteLibraryPanel.html
@@ -398,7 +398,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <div>
             <h4 class="mb-1">
-              <i class="bi bi-collection"></i> Website Library
+              <i class="bi bi-collection"></i> Website Activity
             </h4>
             <small id="connectionStatus">
               <span class="status-indicator status-connected"></span>
