Improving Search UX

--- a/ts/packages/agents/browser/src/extension/websiteLibraryPanel.html
+++ b/ts/packages/agents/browser/src/extension/websiteLibraryPanel.html
@@ -480,6 +480,14 @@
                     placeholder="Search websites, bookmarks, and pages using AI..."
                   />
                   <button
+                    id="clearSearchButton"
+                    class="btn btn-outline-secondary"
+                    type="button"
+                    title="Clear search"
+                  >
+                    <i class="bi bi-x-circle"></i>
+                  </button>
+                  <button
                     id="searchButton"
                     class="btn btn-primary"
                     type="button"
