--- a/ts/packages/agents/browser/src/extension/actionIndex.html
+++ b/ts/packages/agents/browser/src/extension/actionIndex.html
@@ -245,6 +245,159 @@
         border-color: #adb5bd;
       }
 
+      /* View mode controls */
+      .view-mode-controls {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 1rem;
+      }
+
+      .view-mode-controls .btn-group .btn {
+        font-size: 0.875rem;
+        padding: 0.5rem 1rem;
+      }
+
+      .view-mode-controls .btn i {
+        margin-right: 0.25rem;
+      }
+
+      /* Bulk operations */
+      .bulk-operations {
+        border: 2px dashed #dee2e6;
+        border-radius: 0.5rem;
+        background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+      }
+
+      .bulk-operations.active {
+        border-color: #667eea;
+        background: linear-gradient(135deg, #f0f4ff 0%, #e7f3ff 100%);
+      }
+
+      /* Group cards */
+      .group-card {
+        background: white;
+        border: 1px solid #e9ecef;
+        border-radius: 0.5rem;
+        overflow: hidden;
+        transition: all 0.2s ease;
+      }
+
+      .group-card:hover {
+        border-color: #667eea;
+        box-shadow: 0 4px 8px rgba(102, 126, 234, 0.15);
+      }
+
+      .group-header {
+        background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+        padding: 1rem;
+        border-bottom: 1px solid #e9ecef;
+      }
+
+      .group-toggle {
+        color: #667eea;
+        text-decoration: none;
+        transition: transform 0.2s ease;
+      }
+
+      .group-toggle:hover {
+        color: #5a6fd8;
+        transform: scale(1.1);
+      }
+
+      .group-content {
+        padding: 0.5rem;
+      }
+
+      .action-card-compact {
+        background: white;
+        border: 1px solid #f0f0f0;
+        border-radius: 0.375rem;
+        margin-bottom: 0.5rem;
+        transition: all 0.2s ease;
+      }
+
+      .action-card-compact:hover {
+        border-color: #667eea;
+        box-shadow: 0 2px 4px rgba(102, 126, 234, 0.1);
+      }
+
+      .action-card-compact:last-child {
+        margin-bottom: 0;
+      }
+
+      .action-controls-compact {
+        display: flex;
+        gap: 0.25rem;
+      }
+
+      .action-controls-compact .btn {
+        padding: 0.25rem 0.5rem;
+        font-size: 0.75rem;
+      }
+
+      /* Badge styles for compact view */
+      .badge-author-sm {
+        background-color: #e7f3ff;
+        color: #0066cc;
+        font-size: 0.65rem;
+        padding: 0.125rem 0.375rem;
+        border-radius: 0.2rem;
+        font-weight: 500;
+        margin-right: 0.25rem;
+      }
+
+      .badge-author-sm.user {
+        background-color: #fff2e7;
+        color: #cc6600;
+      }
+
+      .badge-domain-sm {
+        background-color: #f0f9ff;
+        color: #0080cc;
+        font-size: 0.65rem;
+        padding: 0.125rem 0.375rem;
+        border-radius: 0.2rem;
+        font-weight: 500;
+        margin-right: 0.25rem;
+      }
+
+      .usage-badge {
+        background-color: #f0fff4;
+        color: #00a651;
+        font-size: 0.65rem;
+        padding: 0.125rem 0.375rem;
+        border-radius: 0.2rem;
+        font-weight: 500;
+        margin-left: 0.25rem;
+      }
+
+      .usage-stats, .last-used {
+        font-size: 0.75rem;
+        color: #6c757d;
+      }
+
+      .usage-stats i, .last-used i {
+        margin-right: 0.25rem;
+      }
+
+      /* Checkboxes */
+      .form-check-input:checked {
+        background-color: #667eea;
+        border-color: #667eea;
+      }
+
+      .form-check-input:focus {
+        border-color: #667eea;
+        box-shadow: 0 0 0 0.2rem rgba(102, 126, 234, 0.25);
+      }
+
+      /* Group select checkbox states */
+      .group-select-checkbox:indeterminate {
+        background-color: #6c757d;
+        border-color: #6c757d;
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
+      }
+
       /* Responsive adjustments */
       @media (max-width: 768px) {
         .container-fluid {
@@ -331,6 +484,24 @@
           </div>
         </div>
 
+        <!-- View Mode Controls -->
+        <div class="view-mode-controls mb-3">
+          <div class="btn-group btn-group-sm" role="group" aria-label="View modes">
+            <button type="button" class="btn btn-outline-primary active" id="viewModeWebsite" title="Group by website">
+              <i class="bi bi-globe"></i> By Website
+            </button>
+            <button type="button" class="btn btn-outline-primary" id="viewModeCategory" title="Group by category">
+              <i class="bi bi-tags"></i> By Category
+            </button>
+            <button type="button" class="btn btn-outline-primary" id="viewModeUsage" title="Group by usage">
+              <i class="bi bi-bar-chart"></i> By Usage
+            </button>
+            <button type="button" class="btn btn-outline-primary" id="viewModeTimeline" title="Group by timeline">
+              <i class="bi bi-clock"></i> Timeline
+            </button>
+          </div>
+        </div>
+
         <div class="filter-controls">
           <select id="authorFilter" class="form-select">
             <option value="all">All Authors</option>
@@ -344,6 +515,14 @@
 
           <select id="categoryFilter" class="form-select">
             <option value="all">All Categories</option>
+          </select>
+
+          <select id="dateRangeFilter" class="form-select">
+            <option value="all">All Time</option>
+          </select>
+
+          <select id="usageFrequencyFilter" class="form-select">
+            <option value="all">All Actions</option>
           </select>
 
           <button class="filter-clear-btn" id="clearFiltersBtn">
@@ -370,6 +549,30 @@
 
       <!-- Actions Container -->
       <div class="actions-container">
+        <!-- Bulk Operations -->
+        <div id="bulkOperationsContainer" class="bulk-operations d-none mb-3">
+          <div class="d-flex justify-content-between align-items-center p-2 bg-light rounded">
+            <div class="d-flex align-items-center">
+              <span class="me-3">
+                <strong id="selectedActionsCount">0</strong> action(s) selected
+              </span>
+              <div class="btn-group btn-group-sm">
+                <button class="btn btn-outline-primary" id="selectAllBtn" title="Select all actions">
+                  <i class="bi bi-check-all"></i> Select All
+                </button>
+                <button class="btn btn-outline-secondary" id="deselectAllBtn" title="Deselect all actions">
+                  <i class="bi bi-square"></i> Deselect All
+                </button>
+              </div>
+            </div>
+            <div class="btn-group btn-group-sm">
+              <button class="btn btn-outline-danger" id="bulkDeleteBtn" title="Delete selected actions">
+                <i class="bi bi-trash"></i> Delete Selected
+              </button>
+            </div>
+          </div>
+        </div>
+
         <div class="d-flex justify-content-between align-items-center mb-3">
           <h6 class="mb-0">
             <i class="bi bi-collection"></i> 
