Remove local storage fallback paths

--- a/ts/packages/agents/browser/src/extension/sidepanel.html
+++ b/ts/packages/agents/browser/src/extension/sidepanel.html
@@ -404,7 +404,7 @@
               <button
                 id="saveAction"
                 class="btn btn-primary"
-                title="Save this action"
+                title="Create and save this action"
               >
                 <i class="bi bi-floppy"></i> Save Action
               </button>
